Archive/bc0dcc3299d98f5d4d5ee6a95933c7ac-0e5891ff8107f561b22ca21b6b60d875/output
+ g++ -std=c++03 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In constructor ‘derived<T>::derived()’:
main.cpp:10:15: error: ‘<::’ cannot begin a template-argument list [-fpermissive]
         : base<::derived, T>()
               ^
main.cpp:10:15: note: ‘<:’ is an alternate spelling for ‘[’. Insert whitespace between ‘<’ and ‘::’
main.cpp:10:15: note: (if you use ‘-fpermissive’ or ‘-std=c++11’, or ‘-std=gnu++11’ G++ will accept your code)
